--- a/WebCademy/CreateSite/Урок1/index.html
+++ b/WebCademy/CreateSite/Урок1/index.html
@@ -5,18 +5,44 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Сайт портфолио</title>
+	<!-- Нормализация стилей -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+	<!-- Собственные  стилей -->
 	<link rel="stylesheet" href="/css/main.css">
 	<link rel="shortcut icon" href="/img/favicon/favicon.ico" type="image/x-icon">
+	<!-- Подключение шрифтов -->
 	<link
 		href="https://fonts.googleapis.com/css?family=Merriweather|PT+Sans+Caption:400,700&display=swap&subset=cyrillic-ext"
+		rel="stylesheet">
+	<!-- Подключение икнонок awesome -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
 		rel="stylesheet">
 </head>
 
 <body>
-	<h1>Привет мир!</h1>
-	<p>Текст для примера</p>
-	<img src="/img/portfolio/project_organica.jpg" alt="Проект Органика">
+	<!-- HEADER -->
+	<div class="header">
+		<div class="header__title">
+			Максим Нечепорук
+		</div>
+		<div class="header__slogan">
+			Верстка сайтов на HTML и CSS<br>HTML5 CSS3 JS jQuery
+		</div>
+		<div class="header__arrow">
+			<i class="fas fa-chevron-down"></i>
+		</div>
+	</div>
 
+	<!-- HEADER -->
+	<!-- PORTFOLIO -->
+
+
+	<!-- PORTFOLIO -->
+	<!-- FOOTER -->
+
+
+
+	<!-- FOOTER -->
 
 </body>
 
