корректировка по 3ему уроку. Верстка Портфолио

--- a/WebCademy/CreateSite/Урок1/index.html
+++ b/WebCademy/CreateSite/Урок1/index.html
@@ -35,8 +35,61 @@
 
 	<!-- HEADER -->
 	<!-- PORTFOLIO -->
+	<div class="portflio">
+		<div class="container">
+			<div class="title">
+				Портфолио
+			</div>
+			<div class="row">
+				<!-- Работа в портфолио -->
+				<div class="col-4">
+					<div class="portfolio-item">
+						<div class="portfolio-item_image">
+							<img src="/img/portfolio/project_organica.jpg" alt="Органика">
+						</div>
+						<div class="portfolio-item_title">
+							<a href="#">Макет Органика</a>
+						</div>
+						<div class="portfolio-item_text">
+							<p>Верстка одностраничного сайта по PSD макету.</p>
+						</div>
+					</div>
+				</div>
+				<!-- / / Работа в портфолио -->
 
-
+				<!-- Работа в портфолио -->
+				<div class="col-4">
+					<div class="portfolio-item">
+						<div class="portfolio-item_image">
+							<img src="/img/portfolio/project_apollo.jpg" alt="Апполо">
+						</div>
+						<div class="portfolio-item_title">
+							<a href="#">Учебный макет Апполо</a>
+						</div>
+						<div class="portfolio-item_text">
+							<p>Верстка лендинга хостинг компании. Мобильная адаптивность.</p>
+						</div>
+					</div>
+				</div>
+				<!-- / / Работа в портфолио -->
+				<!-- Работа в портфолио -->
+				<div class="col-4">
+					<div class="portfolio-item">
+						<div class="portfolio-item_image">
+							<img src="/img/portfolio/project_portfolio.jpg" alt="Портфолио">
+						</div>
+						<div class="portfolio-item_title">
+							<a href="#">Личный сайт портфолио</a>
+						</div>
+						<div class="portfolio-item_text">
+							<p>Верстка личного сайта портфолио, на котором Вы сейчас находитесь.</p>
+						</div>
+					</div>
+				</div>
+				<!-- / / Работа в портфолио -->
+			</div>
+		</div>
+	</div>
 	<!-- PORTFOLIO -->
 	<!-- FOOTER -->
 
