--- a/WebCademy/CreateSite/index.html
+++ b/WebCademy/CreateSite/index.html
@@ -92,7 +92,58 @@
 	</div>
 	<!-- PORTFOLIO -->
 	<!-- FOOTER -->
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+				<!-- колонка1 -->
+				<div class="col-4">
+					<p class="footer__name">Нечепорук Максим </p>
+					<p>2020 HTML верстка и разработка сайтов</p>
+				</div>
+				<!-- / / колонка1 -->
+				<!-- колонка2 -->
+				<div class="col-4">
+					<p class="footer__social">Мои профили в социальных сетях:</p>
+					<p class="footer__icons">
+						<!-- vk -->
+						<a href="#" target="_blank">
+							<i class="fab fa-vk"></i>
+						</a>
+						<!-- vk -->
+						<!-- twitter -->
+						<a href="#" target="_blank">
+							<i class="fab fa-twitter"></i>
+						</a>
+						<!-- twitter -->
+						<!-- yt -->
+						<!-- insta -->
+						<a href="#" target="_blank">
+							<i class="fab fa-instagram"></i>
+						</a>
+						<!-- insta -->
+						<!-- fb -->
+						<a href="#" target="_blank">
+							<i class="fab fa-facebook-f"></i>
+						</a>
 
+						<!-- fb -->
+
+
+					</p>
+
+				</div>
+				<!-- / /колонка2 -->
+				<!-- колонка3 -->
+				<div class="col-4">
+					<div class=""><a href="#" class="button" target="_blank">связаться Вконтакте</a></div>
+					<p class="">Напишите мне, чтобы заказать или узнать<br> стоимость верстки вашего проекта</p>
+				</div>
+				<!-- / / колонка3 -->
+			</div>
+
+		</div>
+
+	</div>
 
 
 	<!-- FOOTER -->
