--- a/WebCademy/CreateSite/index.html
+++ b/WebCademy/CreateSite/index.html
@@ -45,10 +45,10 @@
 				<div class="col-4">
 					<div class="portfolio-item">
 						<div class="portfolio-item_image">
-							<img src="/img/portfolio/project_organica.jpg" alt="Органика">
+							<img src="/img/portfolio/project_juce.jpg" alt="Тропический сад">
 						</div>
 						<div class="portfolio-item_title">
-							<a href="#">Макет Органика</a>
+							<a href="/work-trop-garden.html">Макет Тропический сад</a>
 						</div>
 						<div class="portfolio-item_text">
 							<p>Верстка одностраничного сайта по PSD макету.</p>
@@ -61,13 +61,28 @@
 				<div class="col-4">
 					<div class="portfolio-item">
 						<div class="portfolio-item_image">
-							<img src="/img/portfolio/project_apollo.jpg" alt="Апполо">
+							<img src="/img/portfolio/project_pizza.jpg" alt="Pizza">
 						</div>
 						<div class="portfolio-item_title">
-							<a href="#">Учебный макет Апполо</a>
+							<a href="/work-maket-pizza.html">Учебный макет Pizza</a>
 						</div>
 						<div class="portfolio-item_text">
-							<p>Верстка лендинга хостинг компании. Мобильная адаптивность.</p>
+							<p>Верстка лендинга пиццерии</p>
+						</div>
+					</div>
+				</div>
+				<!-- / / Работа в портфолио -->
+				<!-- Работа в портфолио -->
+				<div class="col-4">
+					<div class="portfolio-item">
+						<div class="portfolio-item_image">
+							<img src="/img/portfolio/project_WayUp.jpg" alt="WayUp">
+						</div>
+						<div class="portfolio-item_title">
+							<a href="/work-maket-wayup.html">Учебный макет от студии WayUP</a>
+						</div>
+						<div class="portfolio-item_text">
+							<p>Учебный проект от веб-студии WayUp. Адаптивность</p>
 						</div>
 					</div>
 				</div>
@@ -79,10 +94,10 @@
 							<img src="/img/portfolio/project_portfolio.jpg" alt="Портфолио">
 						</div>
 						<div class="portfolio-item_title">
-							<a href="#">Личный сайт портфолио</a>
+							<a href="/work-maket-portfolio.html">Личный сайт портфолио</a>
 						</div>
 						<div class="portfolio-item_text">
-							<p>Верстка личного сайта портфолио, на котором Вы сейчас находитесь.</p>
+							<p>Учебный проект от веб-студии WebCademy.ru. Адаптивность</p>
 						</div>
 					</div>
 				</div>
