--- a/WebCademy/CreateSite/index.html
+++ b/WebCademy/CreateSite/index.html
@@ -3,7 +3,9 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Инструкция для IE -->
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<title>Сайт портфолио</title>
 	<!-- Нормализация стилей -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
@@ -41,6 +43,7 @@
 				Портфолио
 			</div>
 			<div class="row">
+				<!--строка 1-->
 				<!-- Работа в портфолио -->
 				<div class="col-4">
 					<div class="portfolio-item">
@@ -87,6 +90,10 @@
 					</div>
 				</div>
 				<!-- / / Работа в портфолио -->
+			</div>
+			<!--конец сроки 1-->
+			<!-- строка 2 -->
+			<div class="row">
 				<!-- Работа в портфолио -->
 				<div class="col-4">
 					<div class="portfolio-item">
@@ -103,6 +110,8 @@
 				</div>
 				<!-- / / Работа в портфолио -->
 			</div>
+			<!-- конец строки 2 -->
+
 		</div>
 	</div>
 	<!-- PORTFOLIO -->
