--- a/WebCademy/CreateSite/work-maket-pizza.html
+++ b/WebCademy/CreateSite/work-maket-pizza.html
@@ -9,8 +9,8 @@
 	<!-- Нормализация стилей -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 	<!-- Собственные  стилей -->
-	<link rel="stylesheet" href="/css/main.css">
-	<link rel="shortcut icon" href="/img/favicon/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 	<!-- Подключение шрифтов -->
 	<link
 		href="https://fonts.googleapis.com/css?family=Merriweather|PT+Sans+Caption:400,700&display=swap&subset=cyrillic-ext"
@@ -25,8 +25,8 @@
 
 	<div class="portfolio-single-page">
 		<div class="container">
-			<img src="/img/portfolio/big/pizza.jpg" alt="Пицца">
-			<a href="/index.html" class="button-bck-pizza">&larr; Вернуться на главную</a>
+			<img src="img/portfolio/big/pizza.jpg" alt="Пицца">
+			<a href="index.html" class="button-bck-pizza">&larr; Вернуться на главную</a>
 		</div>
 
 
