--- a/WebCademy/CreateSite/index.html
+++ b/WebCademy/CreateSite/index.html
@@ -10,8 +10,8 @@
 	<!-- Нормализация стилей -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 	<!-- Собственные  стилей -->
-	<link rel="stylesheet" href="/css/main.css">
-	<link rel="shortcut icon" href="/img/favicon/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 	<!-- Подключение шрифтов -->
 	<link
 		href="https://fonts.googleapis.com/css?family=Merriweather|PT+Sans+Caption:400,700&display=swap&subset=cyrillic-ext"
@@ -28,34 +28,43 @@
 			Максим Нечепорук
 		</div>
 		<div class="header__slogan">
-			Верстка сайтов на HTML и CSS<br>HTML5 CSS3 JS jQuery
+			Верстка сайтов на HTML и CSS<br>
+			Сервис Webflow
+			<!-- HTML5 CSS3 JS jQuery -->
 		</div>
 		<div class="header__arrow">
-			<i class="fas fa-chevron-down"></i>
+			<a href="#portfolio"><i class="fas fa-chevron-down"></i></a>
 		</div>
 	</div>
 
 	<!-- HEADER -->
 	<!-- PORTFOLIO -->
-	<div class="portflio">
+	<div class="portflio" id="portfolio">
 		<div class="container">
 			<div class="title">
 				Портфолио
+			</div>
+			<div class="sub_title1">
+				Верстка вручную
+			</div>
+			<div class="sub_title2">
+				Верстка с помощью сервиса Webflow
 			</div>
 			<div class="row">
 				<!--строка 1-->
 				<!-- Работа в портфолио -->
 				<div class="col-4">
 					<div class="portfolio-item">
-						<div class="portfolio-item_image">
-							<img src="/img/portfolio/project_juce.jpg" alt="Тропический сад">
-						</div>
-						<div class="portfolio-item_title">
-							<a href="/work-trop-garden.html">Макет Тропический сад</a>
-						</div>
-						<div class="portfolio-item_text">
-							<p>Верстка одностраничного сайта по PSD макету.</p>
-						</div>
+						<a class="portfolio-item_image">
+							<a href="../CreateSite/work-trop-garden.html"><img src="img/portfolio/project_juce.jpg"
+									alt="Тропический сад"></a>
+					</div>
+					<div class="portfolio-item_title">
+						<a href="../CreateSite/work-trop-garden.html">Макет Тропический сад</a>
+					</div>
+					<div class="portfolio-item_text">
+						<p>Верстка одностраничного сайта по PSD макету. Учебный проект от веб-студии <a
+								href="https://WebCademy.ru" target="blank">WebCademy.ru</a>.</p>
 					</div>
 				</div>
 				<!-- / / Работа в портфолио -->
@@ -64,13 +73,15 @@
 				<div class="col-4">
 					<div class="portfolio-item">
 						<div class="portfolio-item_image">
-							<img src="/img/portfolio/project_pizza.jpg" alt="Pizza">
+							<a href="../CreateSite/work-maket-pizza.html"><img src="img/portfolio/project_pizza.jpg"
+									alt="Pizza"></a>
 						</div>
 						<div class="portfolio-item_title">
-							<a href="/work-maket-pizza.html">Учебный макет Pizza</a>
+							<a href="../CreateSite/work-maket-pizza.html">Учебный макет Pizza</a>
 						</div>
 						<div class="portfolio-item_text">
-							<p>Верстка лендинга пиццерии</p>
+							<p>Верстка лендинга пиццерии от проекта <a href="https://tpverstak.ru/" target="blank">"Типичный
+									верстальщик"</a></p>
 						</div>
 					</div>
 				</div>
@@ -79,13 +90,16 @@
 				<div class="col-4">
 					<div class="portfolio-item">
 						<div class="portfolio-item_image">
-							<img src="/img/portfolio/project_WayUp.jpg" alt="WayUp">
+							<a href="../CreateSite/work-maket-wayup.html"><img src="img/portfolio/project_WayUp.jpg"
+									alt="WayUp"><a href="../CreateSite/work-maket-wayup.html"></a>
 						</div>
 						<div class="portfolio-item_title">
-							<a href="/work-maket-wayup.html">Учебный макет от студии WayUP</a>
+							<a href="../CreateSite/work-maket-wayup.html">Учебный макет от студии WayUP</a>
 						</div>
 						<div class="portfolio-item_text">
-							<p>Учебный проект от веб-студии WayUp. Адаптивность</p>
+							<p>Учебный проект от веб-студии <a href="https://wayup.in/?ref_link=26718"
+									target="blank">WayUp</a>.
+								Адаптивность</p>
 						</div>
 					</div>
 				</div>
@@ -98,13 +112,16 @@
 				<div class="col-4">
 					<div class="portfolio-item">
 						<div class="portfolio-item_image">
-							<img src="/img/portfolio/project_portfolio.jpg" alt="Портфолио">
+							<a href="../CreateSite/work-maket-portfolio.html"><img src="img/portfolio/project_portfolio.jpg"
+									alt="Портфолио"></a>
 						</div>
 						<div class="portfolio-item_title">
-							<a href="/work-maket-portfolio.html">Личный сайт портфолио</a>
+							<a href="../CreateSite/work-maket-portfolio.html">Личный сайт портфолио</a>
 						</div>
 						<div class="portfolio-item_text">
-							<p>Учебный проект от веб-студии WebCademy.ru. Адаптивность</p>
+							<p>Учебный проект от веб-студии <a href="https://WebCademy.ru" target="blank">WebCademy.ru</a>.
+								Адаптивность
+							</p>
 						</div>
 					</div>
 				</div>
