--- a/WebCademy/CreateSite/work-maket-portfolio.html
+++ b/WebCademy/CreateSite/work-maket-portfolio.html
@@ -9,8 +9,8 @@
 	<!-- Нормализация стилей -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 	<!-- Собственные  стилей -->
-	<link rel="stylesheet" href="/css/main.css">
-	<link rel="shortcut icon" href="/img/favicon/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 	<!-- Подключение шрифтов -->
 	<link
 		href="https://fonts.googleapis.com/css?family=Merriweather|PT+Sans+Caption:400,700&display=swap&subset=cyrillic-ext"
@@ -18,15 +18,15 @@
 	<!-- Подключение икнонок awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
 		rel="stylesheet">
-	<title>Макет Тропичский сад</title>
+	<title>Макет Портфолио</title>
 </head>
 
 <body>
 
 	<div class="portfolio-single-page">
 		<div class="container">
-			<img src="/img/portfolio/big/portfolio.jpg" alt="Портфолио">
-			<a href="/index.html" class="button-bck-prtfol">&larr; Вернуться на главную</a>
+			<img src="img/portfolio/big/portfolio.jpg" alt="Портфолио">
+			<a href="index.html" class="button-bck-prtfol">&larr; Вернуться на главную</a>
 		</div>
 
 
