--- a/WebCademy/CreateSite/index.html
+++ b/WebCademy/CreateSite/index.html
@@ -44,62 +44,61 @@
 			<div class="title">
 				Портфолио
 			</div>
-			<div class="sub_title1">
-				Верстка вручную
-			</div>
-			<div class="sub_title2">
-				Верстка с помощью сервиса Webflow
-			</div>
 			<div class="row">
+				<!-- верстка вручную -->
+				<div class="sub_title">
+					Верстка вручную
+				</div>
+				<!-- верстка вручную -->
 				<!--строка 1-->
 				<!-- Работа в портфолио -->
 				<div class="col-4">
 					<div class="portfolio-item">
-						<a class="portfolio-item_image">
-							<a href="../CreateSite/work-trop-garden.html"><img src="img/portfolio/project_juce.jpg"
-									alt="Тропический сад"></a>
-					</div>
-					<div class="portfolio-item_title">
-						<a href="../CreateSite/work-trop-garden.html">Макет Тропический сад</a>
-					</div>
-					<div class="portfolio-item_text">
-						<p>Верстка одностраничного сайта по PSD макету. Учебный проект от веб-студии <a
-								href="https://WebCademy.ru" target="blank">WebCademy.ru</a>.</p>
+						<div class="portfolio-item_image">
+							<a href="#"><img src="img/portfolio/project_portfolio.jpg" alt="Портфолио"></a>
+						</div>
+						<div class="portfolio-item_title">
+							<a href="#">Личный сайт портфолио</a>
+						</div>
+						<div class="portfolio-item_text">
+							<p>Учебный проект от веб-студии <a href="https://WebCademy.ru" target="blank">WebCademy.ru</a>.
+								Адаптивность
+							</p>
+						</div>
 					</div>
 				</div>
-				<!-- / / Работа в портфолио -->
 
+				<!-- / / Работа в портфолио -->
+				<div class="col-4">
+					<div class="portfolio-item">
+						<div class="portfolio-item_image">
+							<a href="/CreateSite/work-trop-garden.html"><img src="img/portfolio/project_juce.jpg"
+									alt="Тропический сад"></a>
+						</div>
+						<div class="portfolio-item_title">
+							<a href="/CreateSite/work-trop-garden.html">Макет Тропический сад</a>
+						</div>
+						<div class="portfolio-item_text">
+							<p>Верстка одностраничного сайта по PSD макету. Учебный проект от веб-студии <a
+									href="https://WebCademy.ru" target="blank">WebCademy.ru</a>.</p>
+						</div>
+					</div>
+					<!-- Работа в портфолио -->
+				</div>
+				<!-- / / Работа в портфолио -->
 				<!-- Работа в портфолио -->
 				<div class="col-4">
 					<div class="portfolio-item">
 						<div class="portfolio-item_image">
-							<a href="../CreateSite/work-maket-pizza.html"><img src="img/portfolio/project_pizza.jpg"
+							<a href="/CreateSite/work-maket-pizza.html"><img src="img/portfolio/project_pizza.jpg"
 									alt="Pizza"></a>
 						</div>
 						<div class="portfolio-item_title">
-							<a href="../CreateSite/work-maket-pizza.html">Учебный макет Pizza</a>
+							<a href="/CreateSite/work-maket-pizza.html">Учебный макет Pizza</a>
 						</div>
 						<div class="portfolio-item_text">
 							<p>Верстка лендинга пиццерии от проекта <a href="https://tpverstak.ru/" target="blank">"Типичный
 									верстальщик"</a></p>
-						</div>
-					</div>
-				</div>
-				<!-- / / Работа в портфолио -->
-				<!-- Работа в портфолио -->
-				<div class="col-4">
-					<div class="portfolio-item">
-						<div class="portfolio-item_image">
-							<a href="../CreateSite/work-maket-wayup.html"><img src="img/portfolio/project_WayUp.jpg"
-									alt="WayUp"><a href="../CreateSite/work-maket-wayup.html"></a>
-						</div>
-						<div class="portfolio-item_title">
-							<a href="../CreateSite/work-maket-wayup.html">Учебный макет от студии WayUP</a>
-						</div>
-						<div class="portfolio-item_text">
-							<p>Учебный проект от веб-студии <a href="https://wayup.in/?ref_link=26718"
-									target="blank">WayUp</a>.
-								Адаптивность</p>
 						</div>
 					</div>
 				</div>
@@ -112,82 +111,187 @@
 				<div class="col-4">
 					<div class="portfolio-item">
 						<div class="portfolio-item_image">
-							<a href="../CreateSite/work-maket-portfolio.html"><img src="img/portfolio/project_portfolio.jpg"
-									alt="Портфолио"></a>
+							<a href="/CreateSite/work-maket-helloween.html"><img src="img/portfolio/project_helloween.jpg"
+									alt="Helloween"></a>
 						</div>
 						<div class="portfolio-item_title">
-							<a href="../CreateSite/work-maket-portfolio.html">Личный сайт портфолио</a>
+							<a href="/CreateSite/work-maket-helloween.html">Учебный макет Helloween</a>
 						</div>
 						<div class="portfolio-item_text">
-							<p>Учебный проект от веб-студии <a href="https://WebCademy.ru" target="blank">WebCademy.ru</a>.
-								Адаптивность
-							</p>
+							<p>Верстка лендинга Helloween от проекта <a href="https://tpverstak.ru/" target="blank">"Типичный
+									верстальщик"</a></p>
+						</div>
+					</div>
+				</div>
+
+				<!-- / / Работа в портфолио -->
+
+				<!-- Работа в портфолио -->
+
+				<div class="col-4">
+					<div class="portfolio-item">
+						<div class="portfolio-item_image">
+							<a href="/CreateSite/work-maket-wayup.html"><img src="img/portfolio/project_WayUp.jpg"
+									alt="WayUp"></a>
+						</div>
+						<div class="portfolio-item_title">
+							<a href="/CreateSite/work-maket-wayup.html">Учебный макет от студии WayUP</a>
+						</div>
+						<div class="portfolio-item_text">
+							<p>Учебный проект от веб-студии <a href="https://wayup.in/?ref_link=26718"
+									target="blank">WayUp</a>.
+								Адаптивность</p>
+						</div>
+					</div>
+				</div>
+
+				<!-- / / Работа в портфолио -->
+			</div>
+			<!-- конец строки 2 -->
+			<!-- верстка вручную -->
+
+
+			<div class="row">
+				<!-- верстка в Webflow -->
+				<div class="sub_title">
+					Верстка с помощью сервиса Webflow
+				</div>
+				<!-- верстка в Webflow -->
+				<!--строка 1-->
+				<!-- Работа в портфолио -->
+				<div class="col-4">
+					<div class="portfolio-item">
+						<div class="portfolio-item_image">
+							<a href="/CreateSite/work-wf-kofeshop.html"><img src="img/portfolio/project_kofe_shop.jpg"
+									alt="Coffe"></a>
+						</div>
+						<div class="portfolio-item_title">
+							<a href="/CreateSite/work-wf-kofeshop.html">Учебный макет кофейни "Фабрика Кофе"</a>
+						</div>
+						<div class="portfolio-item_text">
+							<p>Верстка лендинга кофейни от проекта <a href="https://www.sokolovm.com/" target="blank">Школа
+									Максима Соколова</a></p>
 						</div>
 					</div>
 				</div>
 				<!-- / / Работа в портфолио -->
+
+				<!-- Работа в портфолио -->
+				<div class="col-4">
+					<div class="portfolio-item">
+						<div class="portfolio-item_image">
+							<a href="/CreateSite/work-wf-cuda.html"><img src="img/portfolio/project_cuda.jpg" alt="Cuda"></a>
+						</div>
+						<div class="portfolio-item_title">
+							<a href="/CreateSite/work-wf-cuda.html">Макет компании Cuda</a>
+						</div>
+						<div class="portfolio-item_text">
+							<p>Верстка одностраничного сайта по PSD макету. Учебный проект. Адаптивность</p>
+						</div>
+					</div>
+					<!-- / / Работа в портфолио -->
+					<!-- Работа в портфолио -->
+					<!-- <div class="col-4"> -->
+					<!-- <div class="portfolio-item"> -->
+					<!-- <div class="portfolio-item_image"> -->
+					<!-- <a href="../work-maket-wayup.html"><img src="img/portfolio/project_WayUp.jpg"
+									alt="WayUp"><a href="../CreateSite/work-maket-wayup.html"></a> -->
+					<!-- </div> -->
+					<!-- <div class="portfolio-item_title"> -->
+					<!-- <a href="../work-maket-wayup.html">Учебный макет от студии WayUP</a> -->
+					<!-- </div> -->
+					<!-- <div class="portfolio-item_text"> -->
+					<!-- <p>Учебный проект от веб-студии <a href="https://wayup.in/?ref_link=26718"
+									target="blank">WayUp</a>.
+								Адаптивность</p> -->
+					<!-- </div> -->
+					<!-- </div> -->
+					<!-- </div> -->
+					<!-- / / Работа в портфолио -->
+				</div>
+				<!--конец сроки 1-->
+				<!-- строка 2 -->
+				<!-- <div class="row"> -->
+				<!-- Работа в портфолио -->
+				<!-- <div class="col-4"> -->
+				<!-- <div class="portfolio-item"> -->
+				<!-- <div class="portfolio-item_image">
+							<a href="../work-maket-portfolio.html"><img src="img/portfolio/project_portfolio.jpg"
+									alt="Портфолио"></a>
+						</div> -->
+				<!-- <div class="portfolio-item_title">
+							<a href="../work-maket-portfolio.html">Личный сайт портфолио</a>
+						</div> -->
+				<!-- <div class="portfolio-item_text">
+							<p>Учебный проект от веб-студии <a href="https://WebCademy.ru" target="blank">WebCademy.ru</a>.
+								Адаптивность
+							</p> -->
+				<!-- </div> -->
+				<!-- </div> -->
+				<!-- </div> -->
+				<!-- / / Работа в портфолио -->
+				<!-- </div> -->
+				<!-- конец строки 2 -->
+
 			</div>
-			<!-- конец строки 2 -->
+		</div>
+		<!-- PORTFOLIO -->
+		<!-- FOOTER -->
+		<div class="footer">
+			<div class="container">
+				<div class="row">
+					<!-- колонка1 -->
+					<div class="col-4">
+						<p class="footer__name">Нечепорук Максим </p>
+						<p>2020 HTML верстка и разработка сайтов</p>
+					</div>
+					<!-- / / колонка1 -->
+					<!-- колонка2 -->
+					<div class="col-4">
+						<p class="footer__social">Мои профили в социальных сетях:</p>
+						<p class="footer__icons">
+							<!-- vk -->
+							<a href="#" target="_blank">
+								<i class="fab fa-vk"></i>
+							</a>
+							<!-- vk -->
+							<!-- twitter -->
+							<a href="#" target="_blank">
+								<i class="fab fa-twitter"></i>
+							</a>
+							<!-- twitter -->
+							<!-- yt -->
+							<!-- insta -->
+							<a href="#" target="_blank">
+								<i class="fab fa-instagram"></i>
+							</a>
+							<!-- insta -->
+							<!-- fb -->
+							<a href="#" target="_blank">
+								<i class="fab fa-facebook-f"></i>
+							</a>
+
+							<!-- fb -->
+
+
+						</p>
+
+					</div>
+					<!-- / /колонка2 -->
+					<!-- колонка3 -->
+					<div class="col-4">
+						<div class=""><a href="#" class="button" target="_blank">связаться Вконтакте</a></div>
+						<p class="">Напишите мне, чтобы заказать или узнать<br> стоимость верстки вашего проекта</p>
+					</div>
+					<!-- / / колонка3 -->
+				</div>
+
+			</div>
 
 		</div>
-	</div>
-	<!-- PORTFOLIO -->
-	<!-- FOOTER -->
-	<div class="footer">
-		<div class="container">
-			<div class="row">
-				<!-- колонка1 -->
-				<div class="col-4">
-					<p class="footer__name">Нечепорук Максим </p>
-					<p>2020 HTML верстка и разработка сайтов</p>
-				</div>
-				<!-- / / колонка1 -->
-				<!-- колонка2 -->
-				<div class="col-4">
-					<p class="footer__social">Мои профили в социальных сетях:</p>
-					<p class="footer__icons">
-						<!-- vk -->
-						<a href="#" target="_blank">
-							<i class="fab fa-vk"></i>
-						</a>
-						<!-- vk -->
-						<!-- twitter -->
-						<a href="#" target="_blank">
-							<i class="fab fa-twitter"></i>
-						</a>
-						<!-- twitter -->
-						<!-- yt -->
-						<!-- insta -->
-						<a href="#" target="_blank">
-							<i class="fab fa-instagram"></i>
-						</a>
-						<!-- insta -->
-						<!-- fb -->
-						<a href="#" target="_blank">
-							<i class="fab fa-facebook-f"></i>
-						</a>
-
-						<!-- fb -->
 
 
-					</p>
-
-				</div>
-				<!-- / /колонка2 -->
-				<!-- колонка3 -->
-				<div class="col-4">
-					<div class=""><a href="#" class="button" target="_blank">связаться Вконтакте</a></div>
-					<p class="">Напишите мне, чтобы заказать или узнать<br> стоимость верстки вашего проекта</p>
-				</div>
-				<!-- / / колонка3 -->
-			</div>
-
-		</div>
-
-	</div>
-
-
-	<!-- FOOTER -->
+		<!-- FOOTER -->
 
 </body>
 
