--- a/WebCademy/CreateSite/work-maket-portfolio.html
+++ b/WebCademy/CreateSite/work-maket-portfolio.html
@@ -16,21 +16,20 @@
 		href="https://fonts.googleapis.com/css?family=Merriweather|PT+Sans+Caption:400,700&display=swap&subset=cyrillic-ext"
 		rel="stylesheet">
 	<!-- Подключение икнонок awesome -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-		rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"">
 	<title>Макет Портфолио</title>
 </head>
 
 <body>
 
-	<div class="portfolio-single-page">
-		<div class="container">
-			<img src="img/portfolio/big/portfolio.jpg" alt="Портфолио">
-			<a href="index.html" class="button-bck-prtfol">&larr; Вернуться на главную</a>
-		</div>
+	<div class=" portfolio-single-page">
+	<div class="container">
+		<img src="img/portfolio/big/portfolio.jpg" alt="Портфолио">
+		<a href="index.html" class="button-bck-prtfol">&larr; Вернуться на главную</a>
+	</div>
 
 
 	</div>
-</body>
+	</body>
 
 </html>
