--- a/WebCademy/CreateSite/work-trop-garden.html
+++ b/WebCademy/CreateSite/work-trop-garden.html
@@ -16,8 +16,7 @@
 		href="https://fonts.googleapis.com/css?family=Merriweather|PT+Sans+Caption:400,700&display=swap&subset=cyrillic-ext"
 		rel="stylesheet">
 	<!-- Подключение икнонок awesome -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-		rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 	<title>Макет Тропичский сад</title>
 </head>
 
