--- a/TypeVerstal/Burgery/site/index.html
+++ b/TypeVerstal/Burgery/site/index.html
@@ -8,7 +8,7 @@
 	<title>Document</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lato&family=Nunito+Sans:wght@700;800&display=swap"
+	<link href="https://fonts.googleapis.com/css2?family=Lato&family=Nunito+Sans:wght@400;700;800;900&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="style/main.css">
 </head>
@@ -39,23 +39,66 @@
 		</div>
 	</div>
 	<!--1st block-->
-	<div class="">
+	<!--2st block-->
+	<div class="promo">
 		<div class="container">
-			<div class="column1">
-
+			<!--left card-->
+			<div class="promo-left">
+				<p class="sale">Скидка</p>
+				<p class="cost">20%</p>
+				<p class="description">
+					При заказе на 3х и более персон мы делаем скидки, а также предоставляем скидки именинникам
+				</p>
 			</div>
-			<div class="column2">
-
+			<!--left card-->
+			<!--right card-->
+			<div class="promo-right">
+				<p class="free">Бесплатно</p>
+				<p class="description">
+					При заказе на сумму 500 рублей и более - доставляем бесплатно
+				</p>
+				<a class="" href="#">заказать</a>
 			</div>
+			<!--right card-->
 		</div>
 	</div>
-
-	<!--2st block-->
-
 	<!--2st block-->
 
 	<!--footer block-->
-
+	<div class="footer">
+		<div class="container">
+			<div class="item">
+				<img class="logo" src="image/logo.svg" alt="Логотип">
+			</div>
+			<div class="item">
+				<h2>основыне ссылки</h2>
+				<ul>
+					<li><a href="">Меню</a></li>
+					<li><a href="">Заказ и Доставка</a></li>
+					<li><a href="">Методы оплаты</a></li>
+					<li><a href="">Контакты</a></li>
+				</ul>
+			</div>
+			<div class="item">
+				<h2>основыне информация</h2>
+				<ul>
+					<li><span>Время</span>
+						ПН-ВС <br>
+						11:00 - 22:00 без перерывов
+					</li>
+					<li><span>Адрес</span>
+						Москва, ул. Тверская, 5, вход со двора
+					</li>
+				</ul>
+			</div>
+			<div class="tel">
+				<ul>
+					<li><a href="tel:+79007871313">+ 7 900 787 13-13</a></li>
+					<li><a href="tel:+79007001414">+ 7 900 700 14-14</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	<!--footer block-->
 
 
