--- a/WebCademy/CreateSite/work-maket-helloween.html
+++ b/WebCademy/CreateSite/work-maket-helloween.html
@@ -24,7 +24,7 @@
 
 	<div class="portfolio-single-page">
 		<div class="container">
-			<img src="img/portfolio/big/helloween.jpg" alt="Helloween">
+			<img src="./img/portfolio/big/helloween.jpg" alt="Helloween">
 			<a href="https://maxspb1975.github.io/Practice/TypeVerstal/SuperStart/helloween/index.html" class="button-bck-pizza">&larr; Вернуться на главную</a>
 		</div>
 
