--- a/WebCademy/CreateSite/index.html
+++ b/WebCademy/CreateSite/index.html
@@ -111,7 +111,7 @@
 				<div class="col-4">
 					<div class="portfolio-item">
 						<div class="portfolio-item_image">
-							<a href="/CreateSite/work-maket-helloween.html"><img src="img/portfolio/project_helloween.jpg"
+							<a href="work-maket-helloween.html"><img src="img/portfolio/project_helloween.jpg"
 									alt="Helloween"></a>
 						</div>
 						<div class="portfolio-item_title">
